<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="6dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pick_date"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/rubik_regular"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarTextColor="@color/white"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:layout_marginTop="-40dp"
            android:layout_marginBottom="-40dp"
            android:layout_marginLeft="-40dp"
            android:layout_marginRight="-40dp"
            android:scaleX="0.60"
            android:scaleY="0.60" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pick_start_time"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/rubik_regular"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pick_end_time"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TimePicker
            android:id="@+id/start_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:timePickerMode="spinner"
            android:layout_marginTop="-40dp"
            android:layout_marginBottom="-40dp"
            android:layout_marginLeft="-40dp"
            android:layout_marginRight="-40dp"
            android:scaleX="0.60"
            android:scaleY="0.60" />
        <TimePicker
            android:id="@+id/end_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:timePickerMode="spinner"
            android:scaleX="0.60"
            android:scaleY="0.60"
            android:layout_marginTop="-40dp"
            android:layout_marginBottom="-40dp"
            android:layout_marginLeft="-40dp"
            android:layout_marginRight="-40dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cncl"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/rubik_medium_italic"
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textAllCaps="false"
            android:layout_marginTop="6dp"

            />
        <Button
            android:id="@+id/submit_range"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:text="@string/submit_range"
            android:fontFamily="@font/rubik_medium_italic"
            android:backgroundTint="@color/white"
            android:textColor="@color/gray"
            android:textSize="11sp"
            android:textAllCaps="false"
            android:layout_marginTop="6dp"
            />
    </LinearLayout>

</LinearLayout>