<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_name"
    android:layout_width="320dp"
    android:layout_height="560dp"
    android:padding="10dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradients">

    <ImageButton
        android:id="@+id/close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/x"
        />

    <TextView
        android:id="@+id/event_loc"
        android:gravity="center"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/loc"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="@+id/close"
        app:layout_constraintBottom_toTopOf="@+id/other_loc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <Button
        android:id="@+id/other_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/other_loc"
        android:textColor="@color/gray"
        android:fontFamily="@font/rubik_regular"
        android:textAllCaps="false"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/event_loc"
        app:layout_constraintBottom_toTopOf="@+id/where_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/where_search"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_regular_italic"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_loc"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/distance"
        android:gravity="center"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/dist"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/other_loc"
        app:layout_constraintBottom_toTopOf="@+id/distance_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/distance_input"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:fontFamily="@font/rubik_regular"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/miles"
        android:inputType="numberDecimal"
        />
    <TextView
        android:id="@+id/miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/miles"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/distance"
        app:layout_constraintStart_toEndOf="@+id/distance_input"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/map_list_text"
        android:gravity="center"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/use_map_list"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/miles"
        app:layout_constraintBottom_toTopOf="@+id/map_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="74dp"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/list"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/map_list_text"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toStartOf="@+id/map_toggle"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/map_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_list_text"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:thumbTint="@color/white"
        app:trackTint="@color/transparent_white"
       />
    <TextView
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="74dp"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/map"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/map_list_text"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintStart_toEndOf="@+id/map_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/rubik_bold_italic"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_toggle" />

    <TextView
        android:id="@+id/error"
        android:layout_width="200dp"
        android:gravity="center"
        android:textSize="11sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_regular_italic"
        android:text=""
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>