...
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/gray"
        />

    <TextView
        android:id="@+id/invitations_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:text="@string/invitations"
        android:fontFamily="@font/rubik_medium"
        android:textSize="28dp"
...
            android:textSize="15sp"
            android:text="@string/invited_events"
            android:textColor="@color/white"
            />

            <Button
                android:id="@+id/public_events_button"
                android:textAllCaps="false"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:layout_marginLeft="20dp"
                android:paddingTop="28dp"
                android:paddingLeft="14dp"
...
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/attending_button"
                android:textAllCaps="false"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:layout_marginLeft="20dp"
                android:paddingTop="28dp"
                android:paddingLeft="14dp"
...
